use LongMemEval isntead of real data for replay stage (predicates too rare and too hard to extract)